OO-5943: enable mathematics formulas in check list